@@ -1,6 +1,5 @@
 package uth.edu.group.service.impl;
-
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import uth.edu.group.model.*;
@@ -11,33 +10,34 @@ import uth.edu.group.mapper.GroupMapper;
 
 import java.util.UUID;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
 
 @Service
+@RequiredArgsConstructor
 public class GroupServiceImpl implements IGroupService {
-    
-    @Autowired 
-    private GroupRepository groupRepo;
 
-    @Autowired 
-    private GroupMemberRepository memberRepo;
-    
-    @Autowired 
-    private GroupMapper groupMapper; 
+    private final GroupRepository groupRepo;
+    private final GroupMemberRepository memberRepo;
+    private final GroupMapper groupMapper;
 
     @Override
     @Transactional
     public GroupResponse createGroup(GroupRequest request, UUID creatorId) {
+
         Group group = groupMapper.toEntity(request);
         group.setCreatedBy(creatorId);
-        if (group.getLeaderId() == null) group.setLeaderId(creatorId);
-        
+
+        if (group.getLeaderId() == null) {
+            group.setLeaderId(creatorId);
+        }
+
         Group saved = groupRepo.save(group);
 
-        // tự - add creator với vai trò LEADER
+        // auto add leader
         MemberRequest memberReq = new MemberRequest();
         memberReq.setUserId(creatorId);
         memberReq.setRoleInGroup("LEADER");
+
         addMemberToGroup(saved.getGroupId(), memberReq);
 
         return groupMapper.toResponse(saved);
@@ -45,55 +45,90 @@ public class GroupServiceImpl implements IGroupService {
 
     @Override
     public List<GroupResponse> getAllGroups() {
-        return groupRepo.findAll().stream()
+        return groupRepo.findAll()
+                .stream()
                 .map(groupMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public GroupResponse getGroupById(UUID id) {
-        Group group = groupRepo.findById(id)
+        return groupRepo.findById(id)
+                .map(groupMapper::toResponse)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy nhóm!"));
-        return groupMapper.toResponse(group);
     }
 
     @Override
     @Transactional
     public GroupResponse updateGroup(UUID id, GroupRequest request) {
+
         Group group = groupRepo.findById(id)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy nhóm!"));
-        group.setGroupName(request.getGroupName());
-        group.setLeaderId(request.getLeaderId());
+
+        if (request.getGroupName() != null)
+            group.setGroupName(request.getGroupName());
+
+        if (request.getLeaderId() != null)
+            group.setLeaderId(request.getLeaderId());
+
+        if (request.getJiraProjectKey() != null)
+            group.setJiraProjectKey(request.getJiraProjectKey());
+
+        if (request.getGithubRepoUrl() != null)
+            group.setGithubRepoUrl(request.getGithubRepoUrl());
+
         return groupMapper.toResponse(groupRepo.save(group));
     }
 
     @Override
     @Transactional
     public void deleteGroup(UUID id) {
-        // Xóa tất cả thành viên trước khi xóa group 
-        List<GroupMember> members = memberRepo.findByGroupGroupId(id);
-        memberRepo.deleteAll(members);
+        memberRepo.deleteByGroupGroupId(id);
         groupRepo.deleteById(id);
     }
 
     @Override
     public void addMemberToGroup(UUID groupId, MemberRequest req) {
-        Group group = groupRepo.findById(groupId).orElseThrow(() -> new RuntimeException("Không tìm thấy nhóm!"));
+
+        if (memberRepo.existsByGroupGroupIdAndUserId(groupId, req.getUserId())) {
+            throw new RuntimeException("Thành viên đã tồn tại!");
+        }
+
+        Group group = groupRepo.findById(groupId)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy nhóm!"));
+
         GroupMember member = new GroupMember();
         member.setGroup(group);
         member.setUserId(req.getUserId());
-        member.setRoleInGroup(req.getRoleInGroup());
+        member.setRoleInGroup(
+                req.getRoleInGroup() != null ? req.getRoleInGroup() : "MEMBER"
+        );
+
+        member.setGithubUsername(req.getGithubUsername());
+        member.setJiraAccountId(req.getJiraAccountId());
+
         memberRepo.save(member);
     }
 
     @Override
     @Transactional
     public void removeMemberFromGroup(UUID groupId, UUID userId) {
-        
+        memberRepo.deleteByGroupGroupId(groupId);
     }
 
     @Override
     public List<MemberRequest> getMembersByGroupId(UUID groupId) {
-        return memberRepo.findByGroupGroupId(groupId).stream().map(groupMapper::toMemberDto).collect(Collectors.toList());
+        return memberRepo.findByGroupGroupId(groupId)
+                .stream()
+                .map(groupMapper::toMemberDto)
+                .toList();
+    }
+
+    @Override
+    public List<GroupResponse> getMyGroups(UUID userId) {
+        return memberRepo.findByUserId(userId)
+                .stream()
+                .map(m -> groupMapper.toResponse(m.getGroup()))
+                .toList();
     }
 }
